Cleaned up some things

--- a/Client/Client/Client.vcxproj.filters
+++ b/Client/Client/Client.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="FileTransferData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PacketType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
