--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="Client.h" />
     <ClInclude Include="FileTransferData.h" />
+    <ClInclude Include="PacketType.h" />
     <ClInclude Include="Source.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
